--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "etherplate",
+  "name": "kette-asset-registry",
   "private": true,
   "version": "0.0.1",
   "description": "Ethereum DApp example project demoing web3 events, Redux, React & React Router",
@@ -7,23 +7,18 @@
     "lint": "eslint app",
     "build": "webpack --mode production --config webpack.prod.js",
     "start": "concurrently --kill-others \"npm run nfc\" \"npm run dev\"",
-    "nfc" : "node ./nfc/index.js",
+    "nfc": "node ./nfc/index.js",
     "dev": "webpack-dev-server --config webpack.dev.js --mode development",
-    "test": "jest"
+    "test": "truffle test"
   },
-  "author": "Chuck Bergeron",
-  "license": "CC0",
+  "author": "Friedhelmensch",
   "main": "truffle.js",
   "directories": {
     "test": "test"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/chuckbergeron/etherplate.git"
-  },
-  "keywords": [],
-  "bugs": {
-    "url": "https://github.com/chuckbergeron/etherplate/issues"
+    "url": "git+https://github.com/kette-io/asset-registry-dapp.git"
   },
   "homepage": "https://github.com/chuckbergeron/etherplate#readme",
   "devDependencies": {
@@ -67,7 +62,7 @@
     "lodash.range": "^3.2.0",
     "nfc-pcsc": "^0.6.2",
     "node-loader": "^0.6.0",
-    "node-sass": "^4.9.0",
+    "node-sass": "^4.9.3",
     "raw-loader": "^0.5.1",
     "react-error-overlay": "^4.0.0",
     "react-test-renderer": "^16.4.0",
@@ -75,14 +70,14 @@
     "schema-utils": "^0.4.5",
     "socket.io": "^2.1.1",
     "style-loader": "^0.21.0",
-    "truffle": "4.1.8",
+    "truffle": "^4.1.14",
     "truffle-deployer": "^2.0.5",
     "uglifyjs-webpack-plugin": "^1.2.4",
     "vanilla-tilt": "^1.4.1",
     "webpack": "^4.8.1",
     "webpack-bundle-analyzer": "^2.11.2",
     "webpack-cli": "^2.1.3",
-    "webpack-dev-server": "^3.1.4",
+    "webpack-dev-server": "^3.1.8",
     "webpack-merge": "^4.1.2",
     "zeppelin-solidity": "1.9.0"
   },
@@ -94,7 +89,7 @@
     "immutability-helper": "^2.6.4",
     "install": "^0.11.0",
     "ipfs-api": "^24.0.1",
-    "npm": "^6.1.0",
+    "npm": "^6.4.1",
     "prop-types": "^15.6.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
