--- a/package.json
+++ b/package.json
@@ -2,14 +2,15 @@
   "name": "kette-asset-registry",
   "private": true,
   "version": "0.0.1",
-  "description": "Ethereum DApp example project demoing web3 events, Redux, React & React Router",
+  "description": "KETTE Registry DApp",
   "scripts": {
     "lint": "eslint app",
     "build": "webpack --mode production --config webpack.prod.js",
     "start": "concurrently --kill-others \"npm run nfc\" \"npm run dev\"",
     "nfc": "node ./nfc/index.js",
     "dev": "webpack-dev-server --config webpack.dev.js --mode development",
-    "test": "truffle test"
+    "test": "truffle test",
+    "flatten": "mkdir -p build && solidity_flattener --solc-paths=\"openzeppelin-solidity/=$(pwd)/node_modules/openzeppelin-solidity/\" --output build/AssetRegistryMerged.sol contracts/AssetRegistry.sol"
   },
   "author": "Friedhelmensch",
   "main": "truffle.js",
@@ -20,7 +21,7 @@
     "type": "git",
     "url": "git+https://github.com/kette-io/asset-registry-dapp.git"
   },
-  "homepage": "https://github.com/chuckbergeron/etherplate#readme",
+  "homepage": "https://kette.io",
   "devDependencies": {
     "@babel/cli": "7.0.0-beta.46",
     "@babel/core": "^7.0.0-beta.46",
@@ -79,7 +80,7 @@
     "webpack-cli": "^2.1.3",
     "webpack-dev-server": "^3.1.8",
     "webpack-merge": "^4.1.2",
-    "zeppelin-solidity": "1.9.0"
+    "openzeppelin-solidity": "^1.12.0"
   },
   "dependencies": {
     "bignumber.js": "^7.0.1",
@@ -103,7 +104,7 @@
     "socket.io-client": "^2.1.1",
     "tmp": "^0.0.33",
     "truffle-contract": "^3.0.5",
-    "truffle-hdwallet-provider": "0.0.3",
+    "truffle-hdwallet-provider": "^1.0.0-web3one.0",
     "web3": "0.20.6",
     "web3-redux": "^0.5.2"
   }
