--- a/package.json
+++ b/package.json
@@ -8,12 +8,9 @@
     "build": "webpack --mode production --config webpack.prod.js",
     "start": "concurrently --kill-others \"npm run nfc\" \"npm run dev\"",
     "nfc": "node ./nfc/index.js",
-    "dev": "webpack-dev-server --config webpack.dev.js --mode development",
-    "test": "truffle test",
-    "flatten": "mkdir -p build && solidity_flattener --solc-paths=\"openzeppelin-solidity/=$(pwd)/node_modules/openzeppelin-solidity/\" --output build/AssetRegistryMerged.sol contracts/AssetRegistry.sol"
+    "dev": "webpack-dev-server --config webpack.dev.js --mode development"
   },
   "author": "Friedhelmensch",
-  "main": "truffle.js",
   "directories": {
     "test": "test"
   },
@@ -71,16 +68,13 @@
     "schema-utils": "^0.4.5",
     "socket.io": "^2.1.1",
     "style-loader": "^0.21.0",
-    "truffle": "^4.1.14",
-    "truffle-deployer": "^2.0.5",
     "uglifyjs-webpack-plugin": "^1.2.4",
     "vanilla-tilt": "^1.4.1",
     "webpack": "^4.8.1",
     "webpack-bundle-analyzer": "^2.11.2",
     "webpack-cli": "^2.1.3",
     "webpack-dev-server": "^3.1.8",
-    "webpack-merge": "^4.1.2",
-    "openzeppelin-solidity": "^1.12.0"
+    "webpack-merge": "^4.1.2"
   },
   "dependencies": {
     "bignumber.js": "^7.0.1",
@@ -90,7 +84,6 @@
     "immutability-helper": "^2.6.4",
     "install": "^0.11.0",
     "ipfs-api": "^24.0.1",
-    "npm": "^6.4.1",
     "prop-types": "^15.6.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
@@ -104,7 +97,6 @@
     "socket.io-client": "^2.1.1",
     "tmp": "^0.0.33",
     "truffle-contract": "^3.0.5",
-    "truffle-hdwallet-provider": "^1.0.0-web3one.0",
     "web3": "0.20.6",
     "web3-redux": "^0.5.2"
   }
